[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/ui/life_bar2.png" type="Texture" id=1]
[ext_resource path="res://sprites/ui/life_bar3.png" type="Texture" id=2]
[ext_resource path="res://scripts/player/health_bar.gd" type="Script" id=3]
[ext_resource path="res://sprites/ui/life_bar1.png" type="Texture" id=4]
[ext_resource path="res://fonts/Pixeled.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 11
use_mipmaps = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=15]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 65, 10, 1 )
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
angular_velocity = 203.89
angular_velocity_random = 0.42
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
color = Color( 0.101961, 1, 0, 1 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "shake"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 0 ), Vector2( -16, 0 ), Vector2( 20, 0 ), Vector2( 0, 0 ) ]
}

[node name="HUD" type="Control" groups=["ui"]]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_under" type="TextureProgress" parent="."]
margin_left = 14.0
margin_top = 14.0
margin_right = 139.0
margin_bottom = 46.0
rect_scale = Vector2( 2, 1 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.231373, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="health_over" type="TextureProgress" parent="health_under"]
margin_left = 0.000142093
margin_top = -1.0252e-05
margin_right = 125.0
margin_bottom = 40.0
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_hp" type="Label" parent="health_under"]
modulate = Color( 0.14902, 1, 0, 1 )
margin_left = 2.0
margin_top = 20.0
margin_right = 97.0
margin_bottom = 52.0
rect_scale = Vector2( 0.5, 1 )
custom_fonts/font = SubResource( 1 )
text = "HP 100 / 100"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="money" type="Label" parent="health_under"]
modulate = Color( 0.937255, 0.92549, 0.0431373, 1 )
margin_left = 1.5
margin_top = 44.0
margin_right = 53.5
margin_bottom = 76.0
rect_scale = Vector2( 0.5, 1 )
custom_fonts/font = SubResource( 14 )
text = "GOLD 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keys" type="Label" parent="health_under"]
margin_left = 1.5
margin_top = 67.0
margin_right = 109.5
margin_bottom = 99.0
rect_scale = Vector2( 0.5, 1 )
custom_fonts/font = SubResource( 15 )
text = "KEYS (0)  (0)"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="health_under"]
position = Vector2( 64.5, 4 )
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
fract_delta = false
process_material = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="update_hp_bar" type="Tween" parent="."]

[node name="numeric_hp_update" type="Tween" parent="."]

[node name="low_hp_pulse" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/shake = SubResource( 13 )
